# fastapi-utils

./: .gitignore  README.md  pyproject.toml
.github/workflows/: workflow.yml
fastapi_utils/filters/: __init__.py  ordering_filter.py  search_filter.py
fastapi_utils/pagination/: __init__.py  base.py  limit_pagination.py  page.py  page_pagination.py
fastapi_utils/schemas/: __init__.py
fastapi_utils/serializers/: __init__.py  serializers.py
fastapi_utils/serializers/sqlalchemy/: __init__.py  serializers.py
fastapi_utils/serializers/tortoise/: __init__.py  serializers.py
fastapi_utils/utils/: __init__.py
